testing/tests/ui/iso646.stderr
error: the previous template error derives from
 --> tests/ui/iso646.rs:4:34
  |
4 | #[template(ext = "txt", source = "{{ a & b }}")]
  |                                  ^^^^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/iso646.rs:18:34
   |
18 | #[template(ext = "txt", source = "{{ a | b }}")]
   |                                  ^^^^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/iso646.rs:32:34
   |
32 | #[template(ext = "txt", source = "{{ a ^ b }}")]
   |                                  ^^^^^^^^^^^^^
